fix z-index conflict with modal - modal should always be on top

--- a/harmony/static/css/harmony.css
+++ b/harmony/static/css/harmony.css
@@ -41,7 +41,7 @@ body {
 	left: 50%;
 	margin-top: -22px;
 	margin-left: -63px;
-	z-index: 1000;
+	z-index: 100;
 }
 .fade {
 	transition: opacity .25s ease-in-out;
